fix dcc support/oppose button overflow (#1909)

--- a/src/components/DCC/DCC.module.css
+++ b/src/components/DCC/DCC.module.css
@@ -23,7 +23,6 @@ span.statusTag > span {
 }
 
 .supportOpposeButtons {
-  float: right;
   padding-bottom: 1rem;
 }
 
